refactor: 각 기능 별 날짜 주입으로 해결
기존에는 각 기능들 자체에서 LocalDate.now()를 가져 테스트가 실패하는 경우가 생기는 가능성이 있었습니다.
따라서 날짜를 주입함으로써 테스트를 용이하게 합니다.